--- a/views/lib/loggedin.hbs
+++ b/views/lib/loggedin.hbs
@@ -108,7 +108,7 @@
                         <div class="dropdown show">
                             <a class="btn btn-secondary btn-thin dropdown-toggle notification-dropdown-toggle {{#if
                                     recentNotifications}}recent{{/if}}" data-toggle="dropdown">
-                                <i class="fa fa-bolt"></i> {{#if recentNotifications}}
+                                <i class="fa fa-bell"></i> {{#if recentNotifications}}
                                 <span class="tag tag-primary">{{recentNotifications}}</span>{{/if}}
                             </a>
 
