--- a/views/lib/loggedin.hbs
+++ b/views/lib/loggedin.hbs
@@ -97,7 +97,7 @@
                 <ul class="nav navbar-nav float-xs-right dropdowns">
                     <li class="nav-item qr-code-action">
                         <div class="dropdown">
-                            <a class="btn btn-secondary btn-thin btn-create-qr dropdown-toggle" data-toggle="dropdown">
+                            <a class="btn btn-secondary btn-thin btn-create-qr hidden-dropdown-toggle dropdown-toggle" data-toggle="dropdown">
                                 <i class="fa fa-qrcode"></i>
                             </a>
                             <div class="dropdown-menu qr-show">
@@ -106,7 +106,7 @@
                     </li>
                     <li class="nav-item notification-dropdown">
                         <div class="dropdown show">
-                            <a class="btn btn-secondary btn-thin dropdown-toggle notification-dropdown-toggle {{#if
+                            <a class="btn btn-secondary btn-thin dropdown-toggle hidden-dropdown-toggle notification-dropdown-toggle {{#if
                                     recentNotifications}}recent{{/if}}" data-toggle="dropdown">
                                 <i class="fa fa-bolt"></i> {{#if recentNotifications}}
                                 <span class="tag tag-primary">{{recentNotifications}}</span>{{/if}}
@@ -134,7 +134,7 @@
 
                     <li class="nav-item help-drodown">
                         <div class="dropdown">
-                            <a class="btn btn-secondary btn-thin dropdown-toggle" data-toggle="dropdown">
+                            <a class="btn btn-secondary btn-thin dropdown-toggle hidden-dropdown-toggle" data-toggle="dropdown">
                                 <i class="fa fa-question"></i>
                             </a>
                             <div class="dropdown-menu">
