--- a/views/lib/loggedin.hbs
+++ b/views/lib/loggedin.hbs
@@ -96,17 +96,18 @@
 
                 <ul class="nav navbar-nav float-xs-right dropdowns">
                     <li class="nav-item qr-code-action">
-                        <div class="dropdown">
-                            <a class="btn btn-secondary btn-thin btn-create-qr hidden-dropdown-toggle dropdown-toggle" data-toggle="dropdown">
+                        <div class="dropdown minimal-dropdown">
+                            <a class="btn btn-secondary btn-thin btn-create-qr dropdown-toggle" data-toggle="dropdown">
                                 <i class="fa fa-qrcode"></i>
                             </a>
-                            <div class="dropdown-menu qr-show">
+                            <div class="dropdown-menu">
+                                <div class="qr-show"></div>
                             </div>
                         </div>
                     </li>
                     <li class="nav-item notification-dropdown">
-                        <div class="dropdown show">
-                            <a class="btn btn-secondary btn-thin dropdown-toggle hidden-dropdown-toggle notification-dropdown-toggle {{#if
+                        <div class="dropdown show minimal-dropdown">
+                            <a class="btn btn-secondary btn-thin dropdown-toggle notification-dropdown-toggle {{#if
                                     recentNotifications}}recent{{/if}}" data-toggle="dropdown">
                                 <i class="fa fa-bolt"></i> {{#if recentNotifications}}
                                 <span class="tag tag-primary">{{recentNotifications}}</span>{{/if}}
@@ -133,8 +134,8 @@
                     </li>
 
                     <li class="nav-item help-drodown">
-                        <div class="dropdown">
-                            <a class="btn btn-secondary btn-thin dropdown-toggle hidden-dropdown-toggle" data-toggle="dropdown">
+                        <div class="dropdown minimal-dropdown">
+                            <a class="btn btn-secondary btn-thin dropdown-toggle" data-toggle="dropdown">
                                 <i class="fa fa-question"></i>
                             </a>
                             <div class="dropdown-menu">
