--- a/views/content/forms/form-external-link.hbs
+++ b/views/content/forms/form-external-link.hbs
@@ -1,17 +1,14 @@
 <div class="form-group">
-  <div style="text-align: center">
-    <!-- <img src="https://media.giphy.com/media/3oz8xBkRsgPTnbK1GM/giphy.gif" style="width: 50%; height: auto"/> -->
-    <div>
-      Sie werden auf die Seite von <span class="provider">einem externen Anbieter</span> weitergeleitet
-    </div>
+  <div style="text-align: center; padding-top: 16px;">
+    Sie werden auf die Seite von <span class="provider">einem externen Anbieter</span> weitergeleitet.
   </div>
-  <div style="text-align: center; padding-top: 8px;">
+  <div style="text-align: center; padding-top: 16px;">
     <a class="external-link-btn" href="#" target="_blank">
       <button class="btn btn-primary btn-add" style="width: 95%;">
         Okay
       </button>
     </a>
-    <button class="btn btn-secondary btn-add btn-close" style="width: 95%;">
+    <button class="btn btn-secondary btn-add btn-close" style="width: 95%; margin-top: 8px;">
       {{closeLabel}}
     </button>
   </div>
