--- a/static/styles/lib/chosen/bootstrap-chosen.scss
+++ b/static/styles/lib/chosen/bootstrap-chosen.scss
@@ -314,6 +314,6 @@
     .chosen-container-multi .chosen-choices .search-choice .search-choice-close,
     .chosen-container .chosen-results-scroll-down span,
     .chosen-container .chosen-results-scroll-up span {
-        background-image: url("/images/chosen-sprite@2x.png") !important;
+        background-image: url("/images/chosen-sprite.png") !important;
         background-size: 52px 37px !important;
         background-repeat: no-repeat !important; } }
