--- a/views/homework/submissions.hbs
+++ b/views/homework/submissions.hbs
@@ -14,7 +14,7 @@
                 <tbody class="usersubmission">
                     <tr class="userinfo">
                         <td class="groupNames">
-                            {{#each this.submission.coWorkers}}
+                            {{#each this.submission.teamMembers}}
                                 <span>{{this.firstName}} {{this.lastName}}</span>
                             {{/each}}
                         </td>
