--- a/views/registration/full.hbs
+++ b/views/registration/full.hbs
@@ -23,8 +23,12 @@
         </div>
         <div class="form-group">
             <label>Passwort <sup>*</sup></label>
-            <input type="password" name="password" class="form-control form-control-lg" placeholder="***************" pattern="^(?=.*[A-Z])(?=.*[0-9])(?=.*[a-z])(?=.*[\-_!<>§$%&\/()=?\\;:,.#+*~']).{8,255}$"
+            <input type="password" name="password" id="password" class="form-control form-control-lg" placeholder="***************" pattern="^(?=.*[A-Z])(?=.*[0-9])(?=.*[a-z])(?=.*[\-_!<>§$%&\/()=?\\;:,.#+*~']).{8,255}$"
                    title="Mindestens 8 Zeichen mit Groß- und Kleinschreibung und mindestens einer Zahl oder Sonderzeichen" required>
+        </div>
+        <div class="form-group">
+            <label>Zur Kontrolle</label>
+            <input type="password" name="password_control" id="password_control" class="form-control form-control-lg" placeholder="***************" required>
         </div>
     {{/content}}
 {{/extend}}
