--- a/views/registration/registration.hbs
+++ b/views/registration/registration.hbs
@@ -4,6 +4,10 @@
         <link rel="stylesheet" href="/styles/authentication/login.css"/>
     {{/content}}
 
+    {{#content "scripts" mode="append"}}
+        <script src="/scripts/pwrecovery.js" type="text/javascript" defer></script>
+    {{/content}}
+
     {{#content "body"}}
         {{#embed "lib/header"}}{{/embed}}
         <main class="container">
