--- a/views/lib/footer.hbs
+++ b/views/lib/footer.hbs
@@ -6,7 +6,9 @@
 
             <nobr>
                 <span> - </span>
-                <a href="https://hpi.de/impressum.html" target="blank">Impressum</a>
+                <a href="/impressum">Impressum</a>
+                <span> - </span>
+                <a href="/impressum#data_security">Datenschutzerklärung</a>
                 <span> - </span>
                 <a href="mailto:hpi-info@hpi.de?subject=Schul_Cloud%20Anfrage">Kontakt</a>
                 <span> - </span>
