--- a/views/homework/edit.hbs
+++ b/views/homework/edit.hbs
@@ -138,7 +138,7 @@
                             <div class="col-md-6 {{#unless assignment.teamSubmissions}}hidden-xl-down{{/unless}}" id="teamsize">
                                 <div class="form-group">
                                     <label>maximale Teamgröße:</label>
-                                    <input class="form-control" name="maxCoWorkers" id="maxCoWorkers" type="number" min="2" placeholder="5" value="{{assignment.maxCoWorkers}}"/>
+                                    <input class="form-control" name="maxTeamMembers" id="maxTeamMembers" type="number" min="2" placeholder="5" value="{{assignment.maxTeamMembers}}"/>
                                 </div>
                             </div>
                         </div>
