fix course time editing

--- a/static/styles/courses/course.scss
+++ b/static/styles/courses/course.scss
@@ -97,6 +97,10 @@
             cursor: pointer;
         }
     }
+
+    .new-course-time-template {
+        display: none;
+    }
 }
 
 .section-course-edit {
