add new course-times in admin area

--- a/views/administration/administration.hbs
+++ b/views/administration/administration.hbs
@@ -3,5 +3,9 @@
         <script src="/scripts/administration.js" type="text/javascript" defer></script>
         <script src="/scripts/coursesTimes.js" type="text/javascript" defer></script>
         <script src="/scripts/tables.js" type="text/javascript" defer></script>
+        <script src="/scripts/jquery/jquery.datetimepicker.full.min.js" type="text/javascript" defer></script>
+    {{/content}}
+    {{#content "styles" mode="append"}}
+        <link rel="stylesheet" href="/styles/lib/datetimepicker/jquery.datetimepicker.min.css"/>
     {{/content}}
 {{/extend}}
