--- a/views/topic/components/content-Etherpad.hbs
+++ b/views/topic/components/content-Etherpad.hbs
@@ -1,3 +1,4 @@
 <h4>{{title}}</h4>
 <p>{{content.description}}</p>
-<iframe src="{{content.url}}?username=Test" style="width: 100%; height: 400px; resize: vertical; overflow: auto;"></iframe>
+<iframe src="{{content.url}}"
+	style="width: 100%; height: 400px; resize: vertical; overflow: auto;"></iframe>
