use ETHERPAD_BASE_URL env variable or openhpi as fallback

--- a/views/topic/edit-topic.hbs
+++ b/views/topic/edit-topic.hbs
@@ -33,7 +33,7 @@
                     <label>Inhalte</label>
 
                     <!-- React Magic -->
-                    <div id="content-blocks" data-value="{{lesson.contents}}"></div>
+                    <div id="content-blocks" data-value="{{lesson.contents}}" data-etherpadbaseurl="{{etherpadBaseUrl}}"></div>
                 </div>
 
                 <div class="form-group">
