--- a/views/administration/forms/form-courses.hbs
+++ b/views/administration/forms/form-courses.hbs
@@ -117,7 +117,9 @@
                         {{#embed "courses/components/template-new-course-time"}}{{/embed}}
                     </tbody>
                 </table>
-                <i class="fa fa-plus new-course-time-add" data-timesref="#collapse1"></i>
+                <span class="new-course-time-add" data-timesref="#collapse1">
+                    <i class="fa fa-plus-circle fa-6"></i> Neuen Termin hinzufügen
+                </span>
             </div>
         </div>
     </div>
