--- a/static/styles/administration/course.scss
+++ b/static/styles/administration/course.scss
@@ -18,6 +18,13 @@
     .disabled > * {
         pointer-events: none;
     }
+    .new-course-time-add {
+        display: inline-block;
+        margin-top: 10px;
+        padding-left: 5px;
+        cursor: pointer;
+        color: $colorHPIRed;
+    }
 }
 
 .new-course-time-template {
