--- a/static/styles/courses/course.scss
+++ b/static/styles/courses/course.scss
@@ -96,6 +96,13 @@
         i {
             cursor: pointer;
         }
+        .new-course-time-add {
+            display: inline-block;
+            margin-top: 10px;
+            padding-left: 5px;
+            cursor: pointer;
+            color: $colorHPIRed;
+        }
     }
 
     .new-course-time-template {
