create fallback for not working blog-feed

--- a/views/authentication/home.hbs
+++ b/views/authentication/home.hbs
@@ -77,6 +77,8 @@
                                         </a></br>
                                         <small>von {{this.dc:creator}} am {{this.pubDate}}</small>
                                     </li>
+                                {{else}}
+                                    <p>Der Blog ist derzeit deaktiviert! Das Schul-Cloud Team kümmert sich darum.</p>
                                 {{/each}}
                             </ul>
                             <a href="https://blog.schul-cloud.org" target="scblog" class="card-link pull-right pt-1">weitere Artikel <i class="fa  fa-angle-double-right" aria-hidden="true"></i></a>
