--- a/static/styles/lib/base.scss
+++ b/static/styles/lib/base.scss
@@ -202,6 +202,11 @@ form.inline {
 	}
 }
 
+.print-only{display:none;}
+@media print {
+    .print-only{display:initial;}
+}
+
 .ckcontent {
     margin: 10px 0;
     color: #373a3c;
