--- a/views/lib/error.hbs
+++ b/views/lib/error.hbs
@@ -21,9 +21,8 @@
                             </div>
                         </div>
                     {{/if}}
+                    <button class="btn btn-secondary" onclick="window.history.back();"><i class="fa fa-arrow-left"></i> zurück</button>
                 </section>
-
-                
             </div>
         {{/content}}
     {{/extend}}
