--- a/views/homework/submissions.hbs
+++ b/views/homework/submissions.hbs
@@ -77,10 +77,16 @@
                                 {{/if}}
                             {{/if}}
                         </td>
-                        <td><i class="fa fa-chevron-left" aria-hidden="true"/></td>
+                        <td>
+                            {{#if this.submission}}
+                                <i class="fa fa-chevron-left" aria-hidden="true"/>
+                            {{/if}}
+                        </td>
                     </tr>
                     <tr class="evaluation">
-                        <td colSpan="6">{{>"homework/evaluation"}}</td>
+                        {{#if this.submission}}
+                            <td colSpan="6">{{>"homework/evaluation"}}</td>
+                        {{/if}}
                     </tr>
                 </tbody>
             {{/each}}
