--- a/static/styles/homework/homework.scss
+++ b/static/styles/homework/homework.scss
@@ -51,6 +51,7 @@
     text-decoration:none;
     &:hover{text-decoration:none;}
     word-break: break-all;
+    word-break: break-word;
     @include media-breakpoint-down(xs) {
       margin-right: 25px;
     }
