--- a/static/styles/lib/sc-theme/sc-card.scss
+++ b/static/styles/lib/sc-theme/sc-card.scss
@@ -40,6 +40,7 @@
             overflow: hidden;
             z-index: 1;
             text-shadow: 0 0 10px rgba(0, 0, 0, .5);
+            word-break: break-all;
             word-break: break-word;
         }
         .sc-card-menu {
@@ -91,6 +92,7 @@
         border-top-width: 0;
         border-bottom-width: 0;
         p{
+            word-break: break-all;
             word-break: break-word;
         }
         &:first-of-type{
