disabled comment area + warning

--- a/views/homework/discussion.hbs
+++ b/views/homework/discussion.hbs
@@ -1,4 +1,10 @@
 <section id="discussion" class="tab-content section-homeworkdetails">
+    <div class="col-md-8 offset-md-2 col-lg-12 offset-lg-0">
+        <div class="alert alert-danger">
+            Der Kommentarbereich ist zur Zeit aus technischen Gründen deaktiviert. Wir arbeiten bereits an einer Lösung!
+        </div>
+    </div>
+    <!-- 
     <div class="discussionarea">
         <ul class="comments">
             {{#each @root.comments}}
@@ -37,4 +43,5 @@
             </form>
         </div>
     </div>
+     -->
 </section>
